@@ -17,4 +17,6 @@ PHP                                                                        NEWS
   the part of haystack before or after first occurence of needle. (Johannes)
 - Added possibility to check in which extension an internal function was
   defined using reflection API. (Johannes)
+- Added --rclass and --rextension CLI arguments to reflect internal classes and
+  loaded extensions (Johannes)
 - Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)
